<resources>
    <string name="app_name">Books</string>
    <string name="logout">Logout</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="enter_book">Enter book</string>
    <string name="delete_all">Delete all books</string>
    <string name="new_book">New book</string>
    <string name="edit_book">Edit book</string>
    <string name="delete">Delete</string>
    <string name="textView">TextView</string>
    <string name="textview">TextView</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_author">Enter Author</string>
    <string name="title_activity_login">Books</string>
    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username completions."</string>
    <string name="could_not_sign_in">We could not sign in you! Check credentials or try again later...,</string>
    <string name="rating">Rating</string>
    <string name="reload_data">Reload data</string>
    <string name="nearby_bookstores">Nearby bookstores</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_maps">Map</string>

</resources>
