<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.carlanmarcel.books.MainActivity">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="101"
        android:title="@string/delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reload_data"
        android:orderInCategory="102"
        android:title="@string/reload_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="103"
        android:title="@string/statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nearby"
        android:orderInCategory="101"
        android:title="@string/nearby_bookstores"
        app:showAsAction="never" />
</menu>
